# webapp-pwgen

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Makefile  README.md  build.rs
assets/css/: main.css  pwgen.css  tailwind.css
assets/pre/: stylesheet.css
docs/: review.1.md
patched/dioxus-fullstack-0.7.3/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patched/dioxus-fullstack-0.7.4/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patched/dioxus-fullstack-0.7.5/: .cargo_vcs_info.json  Cargo.toml
patched/dioxus-fullstack-0.7.6/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patched/dioxus-fullstack-0.7.6/src/: client.rs
patched/dioxus-fullstack-0.7.7/: .cargo_vcs_info.json  Cargo.toml
patched/dioxus-fullstack-0.7.9/: .cargo_vcs_info.json  Cargo.toml
patches/: dioxus-fullstack+0.7.6.patch
public/: pre.html  robots.txt
public/pre-res/: stylesheet.css
resources/: fav_to_android.sh  fav_to_ico.sh  tailwind.input.css
resources/android/assets/: index.html  stylesheet.css
resources/android/res/drawable/: fav.xml
scripts/: android-webview-assets-params.toml  android-webview-params.toml  wva-apk-icon-assemble-r.sh
specs/: spec.md
src/: backends.rs  main.rs
src/components/: alive.rs  info.rs  mod.rs  pwgen.rs  version.rs
src/views/: home.rs
