[package]
name = "pwgen"
version = "0.1.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = """
Password generator.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
#license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-pwgen"


[package.metadata.patch]
crates = ["dioxus-fullstack"]

[patch.crates-io]
dioxus-fullstack = { path = "./patched/dioxus-fullstack-0.7.3" }

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack","router"] }
dioxus-fullstack = "0.7.3"
dioxus-desktop = { version = "0.7.3", optional=true }
dioxus-logger = "0.7.3"

browserinfocm = "0.1.13"

anyhow = { version = "1.0" }
async-sleep-aki = "0.1"
console_error_panic_hook = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = {version = "2.3.0", default-features = false, features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = {version = "2.3.0", default-features = true }

[build-dependencies]
rust-version-info-file = "0.2"


[features]
default = []

web = ["dioxus/web", "browserinfocm/web"]
desktop = ["dioxus/desktop", "browserinfocm/desktop", "dep:dioxus-desktop"]
mobile = ["dioxus/mobile", "browserinfocm/mobile"]
server = ["dioxus/server", "browserinfocm/server", "database"]

database = []

backend_delay = []
backend_homedir = ["database"]
backend_text = []
